syntax = "proto3";

package onight.zjfae.afront.gens;

//Generated By BrewRobot:Tue Apr 19 02:41:46 CST 2016

message PBIFE_messagemanage_listMessage{
	///ife/messagemanage/listMessage.html
	message MessageListList{
		string id = 1;
		string sender = 2;
		string recivier = 3;
		string msgType = 4;
		string msgStatus = 5;
		string readStatus = 6;
		string title = 7;
		string content = 8;
		string createTime = 9;
		string updateTime = 10;
		string expTime = 11;
		string contentId = 12;
		string createTimeStart = 13;
		string createTimeEnd = 14;
	}

	message PageInfo{
		string pageSize = 1;
		string pageIndex = 2;
		string pageCount = 3;
		string totalCount = 4;
	}


	PageInfo pageInfo = 1;

	repeated MessageListList messageListList = 2;


}